@@ -24,6 +24,8 @@ import java.io.Writer;
 
 import org.apache.hadoop.hbase.HBaseAdmin;
 import org.apache.hadoop.hbase.HBaseConfiguration;
+import org.apache.hadoop.hbase.HConnection;
+import org.apache.hadoop.hbase.HConnectionManager;
 import org.apache.hadoop.io.Text;
 
 /**
@@ -39,6 +41,11 @@ public class EnableCommand extends BasicCommand {
   public ReturnMsg execute(HBaseConfiguration conf) {
     assert tableName != null;
     try {
+      HConnection conn = HConnectionManager.getConnection(conf);
+      if (!conn.tableExists(new Text(this.tableName))) {
+        return new ReturnMsg(0, "'" + this.tableName + "' Table not found");
+      }
+      
       HBaseAdmin admin = new HBaseAdmin(conf);
       admin.enableTable(new Text(tableName));
       return new ReturnMsg(1, "Table enabled successfully.");
