@@ -46,6 +46,8 @@ Trunk (unreleased changes)
     HADOOP-2139 (phase 1) Increase parallelism in region servers.
     HADOOP-2267 [Hbase Shell] Change the prompt's title from 'hbase' to 'hql'.
     HADOOP-2139 (phase 2) Make region server more event driven
+    HADOOP-2289 Useless efforts of looking for the non-existant table in select
+                command.
 
 Release 0.15.1
 Branch 0.15
